--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="/style.css" />
+    <script src="./main.js" defer></script>
   </head>
   <body>
     <!-- 눈에 보이는 것을 작업 -->
@@ -12,3 +14,28 @@
     감사합니다!
   </body>
 </html>
+
+<header>
+  <h1>이름 또는 로고</h1>
+  <nav>
+    <ul>
+      <li><a href="#">홈</a></li>
+      <li><a href="#">프로젝트</a></li>
+      <li><a href="#">연락</a></li>
+    </ul>
+  </nav>
+</header>
+
+<footer>
+  <p>&copy; 2023 이름. 모든 권리 보유.</p>
+</footer>
+
+<section id="projects">
+  <h2>프로젝트</h2>
+  <div class="project">
+    <img src="프로젝트 이미지 경로" alt="프로젝트 이름" />
+    <h3>프로젝트 이름</h3>
+    <p>프로젝트 설명</p>
+  </div>
+  <!-- 다른 프로젝트들을 동일한 방식으로 추가 -->
+</section>
